Add couting functionality to the code

--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://www.theodinproject.com/assets/icons/odin-icon-b5b31c073f7417a257003166c98cc23743654715305910c068b93a3bf4d3065d.svg" type="image/x-icon">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <div class="game-board">
+        <div class="game-status">
+            Choose your weapon child!
+        </div>
+        <div class="points">
+            <p class="player">0</p>
+            <span>X</span>
+            <p class="computer">0</p>
+        </div>
+    </div>
+    <div class="game-options">
+        <button name="Rock" class="btn">ROCK</button>
+        <button name="Paper" class="btn">PAPER</button>
+        <button name="Scissors" class="btn">SCISSORS</button>
+    </div>
+    <div class="pop-up">
+        <h2 class="winner-message">Won or Lost message!</h2>
+        <button id="btn-play-again">Play Again!</button>
+    </div>
 </body>
 </html>
