Add last style properties

--- a/index.html
+++ b/index.html
@@ -15,24 +15,22 @@
   </head>
   <body>
     <div class="game-board">
-      <div class="game-status">Choose your weapon child!</div>
+      <div class="game-status"><p>Choose your weapon child!</p></div>
     </div>
-    <div class="center-options">
-      <div class="points">
-        <div>
+    <div class="main">
+      <div class="player-options">
+        <div class="player-points">
           <p class="player">0</p>
         </div>
-        <div>
+        <button name="Rock" id="Rock" class="btn"></button>
+        <button name="Paper" id="Paper" class="btn"></button>
+        <button name="Scissors" id="Scissors" class="btn"></button>
+      </div>
+      <div class="computer-options">
+        <div class="computer-points">
           <p class="computer">0</p>
         </div>
-      </div>
-      <div class="right-side">
-        <div class="player-options">
-          <button name="Rock" id="Rock" class="btn"></button>
-          <button name="Paper" id="Paper" class="btn"></button>
-          <button name="Scissors" id="Scissors" class="btn"></button>
-        </div>
-        <div class="computer-options">
+        <div class="computer-side">
           <div id="C-Scissors" class="computer-selection"></div>
           <div id="C-Rock" class="computer-selection"></div>
           <div id="C-Paper" class="computer-selection"></div>
