Add footer to the project and update the README.md file

--- a/index.html
+++ b/index.html
@@ -41,5 +41,11 @@
       <h2 class="winner-message"></h2>
       <button id="btn-play-again">Play Again</button>
     </div>
+    <footer>
+      <p>Copyright &copy 2022 
+        quiet-arthur
+        <a target="_blank" href="https://github.com/quiet-arthur"><img src="./fav-icon/github-icon.png" alt="github icon"></a>
+      </p>
+    </footer>
   </body>
 </html>
